Changes in Bio + Description

--- a/about/index.html
+++ b/about/index.html
@@ -33,22 +33,23 @@
     </header>
     <main>
         <h1>Meet the Team</h1>
-        <p>Based in Silicon Valley, California, Klyos Capital Investment is more than a private equity firm—we are partners in progress, united by a shared vision of enduring impact. Founded by Julius and Alon, our boutique firm is built on the strength of brotherhood and a relentless commitment to transformative growth. Drawing from the timeless Greek ethos of legacy, we forge deep, trust-based partnerships with visionary companies worldwide, guiding them toward sustainable success.</p>
-        <p>Our investment philosophy is rooted in clarity and conviction. We harness the long-term transformative power of artificial intelligence, focusing on companies the market undervalues and catalysts often overlooked. Guided by evidence-based research and a keen understanding of market distortions caused by “noise,” we aim to capture asymmetric upside before opportunities are widely recognized. At Klyos, we don’t just invest in businesses—we invest in their potential to redefine industries and create lasting value.</p>
-        <p>As young investors, Julius and Alon bring a dynamic blend of bold vision and disciplined execution to Klyos. Julius, our Managing Partner, drives strategic direction with an intuitive grasp of emerging trends and a passion for forging meaningful partnerships. His leadership transforms bold ideas into actionable strategies, positioning Klyos at the forefront of AI-driven innovation. Alon, our Investment Director, complements this vision with razor-sharp analytical prowess, uncovering hidden opportunities in undervalued markets. His rigorous, data-driven approach ensures every investment is grounded in insight, maximizing impact and returns. Together, their synergy as a team redefines private equity, blending youthful audacity with timeless wisdom to create a legacy of transformative growth.</p>
+        <p>Julius Kim and Alon Ben-Shachar  are the co-founders of Klyos Capital, a dynamic investment firm at the forefront of emerging technology sectors. Both passionate about innovation and driven by a shared vision, Julius and Alon bring complementary skills and insights to their leadership roles at Klyos.</p>
+        <p>Growing up with an insatiable curiosity for new trends, Julius was always drawn to the cutting-edge developments in technology and blockchain. His keen eye for identifying hidden opportunities led him to found Klyos at the age of 24, with a focus on pioneering investments in artificial intelligence. Julius's background in capital markets equips him with a strategic mindset, allowing him to approach investment opportunities with a unique and insightful perspective.</p>
+        <p>Similarly, Alon developed a deep appreciation for evidence-based decision-making through his observations of prospect theory and distorted valuations in his family's investments. At 23, he co-founded Klyos alongside Julius, driven by a commitment to challenge assumptions and build conviction on hard evidence. Alon's vast network of savvy tech investors and his analytical acumen provide a solid foundation for the firm's investment strategies.</p>
+        <p>Together, Julius and Alon create a symbiotic leadership dynamic that combines Julius's innovative foresight with Alon's evidence-driven approach. As they navigate the ever-evolving landscape of AI and other emerging technologies, their shared mission is to uncover and nurture the most promising opportunities, ensuring that Klyos remains at the vanguard of transformative investment opportunities.</p>
         <div class="team-container">
             <div class="team-member">
                 <img src="../img/JuliusEdited2.png" alt="Julius, Managing Partner">
                 <div class="overlay">
                     <h3>Julius</h3>
-                    <p>Managing Partner</p>
+                    <p>Partner, Researcher</p>
                 </div>
             </div>
             <div class="team-member">
                 <img src="../img/ElanEdit.png" alt="Alon, Investment Director">
                 <div class="overlay">
                     <h3>Alon</h3>
-                    <p>Investment Director</p>
+                    <p>Partner, Researcher</p>
                 </div>
             </div>
         </div>
