--- a/contact/index.html
+++ b/contact/index.html
@@ -33,7 +33,11 @@
     </header>
     <main>
         <h1>Contact Us</h1>
-        <p>Reach out to discuss partnership opportunities. Email: Alonbalonb@klyoscapital.com | Phone: +1 (650) 387 - 6567        </p>
+        <p class="contact-info">
+            Reach out to discuss partnership opportunities. 
+            <span class="contact-email">Email: <a href="mailto:Alonbalonb@klyoscapital.com">Alonbalonb@klyoscapital.com</a></span> | 
+            <span class="contact-phone">Phone: <a href="tel:+16503876567">+1 (650) 387 - 6567</a></span>
+        </p>
     </main>
     <footer>
         &copy; 2025 Klyos Capital Investment. All rights reserved.
