--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </header>
     <main>
         <h1>Welcome to Klyos Capital Investment</h1>
-        <p>At Klyos, we harness the transformative potential of AI by investing in undervalued opportunities. Through evidence-based research, we identify market nuances, aiming to capture value ahead of recognition.</p>
+        <p>Located in Palo Alto, CA—the heart of Silicon Valley—Klyos Capital is a growth fund focused on investing in the transformative sector of Artificial Intelligence.</p>
+        <p>Our investment philosophy is driven by clarity and conviction. We leverage the long-term transformative potential of AI by identifying undervalued companies and often overlooked catalysts. Through evidence-based financial research and a keen awareness of market distortions, we aim to capture opportunities with substantial upside before they are widely recognized. </p>
+        <p>At Klyos Capital, we don't just invest in businesses; we invest in their potential to reshape industries and create enduring value.</p>
     </main>
     <footer>
         &copy; 2025 Klyos Capital Investment. All rights reserved.
