Fixing contact Info, changing from Klyos Capital Investments to Klyos Capital, fixing hamurger drop nav issues

--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
         </div>
     </main>
     <footer>
-        &copy; 2025 Klyos Capital Investment. All rights reserved.
+        &copy; 2025 Klyos Capital. All rights reserved.
     </footer>
     <script src="../js/script.js"></script>
 </body>
