--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KLYOS Capital Investment - Home</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/x-icon" href="./img/golden.png">
 </head>
 <body>
     <header>
@@ -20,22 +21,27 @@
             </a>
         </div>
         <nav>
-            <ul>
-                <!--<li><a href="index.html" class="active">Home</a></li>-->
-                <li><a href="about/index.html">About Us</a></li>
-              <!--  <li><a href="products/index.html">Services</a></li>-->
-                <li><a href="contact/index.html">Contact</a></li>
+            <button class="hamburger" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-menu">
+                <li><a href="./about/index.html">About Us</a></li>
+                 <!--<li><a href="../products/index.html">Services</a></li>-->
+                <li><a href="./contact/index.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Welcome to Klyos Capital Investment</h1>
+        <h1>Welcome to Klyos Capital</h1>
         <p>Located in Palo Alto, CA—the heart of Silicon Valley—Klyos Capital is a growth fund focused on investing in the transformative sector of Artificial Intelligence.</p>
         <p>Our investment philosophy is driven by clarity and conviction. We leverage the long-term transformative potential of AI by identifying undervalued companies and often overlooked catalysts. Through evidence-based financial research and a keen awareness of market distortions, we aim to capture opportunities with substantial upside before they are widely recognized. </p>
         <p>At Klyos Capital, we don't just invest in businesses; we invest in their potential to reshape industries and create enduring value.</p>
     </main>
     <footer>
-        &copy; 2025 Klyos Capital Investment. All rights reserved.
+        &copy; 2025 Klyos Capital. All rights reserved.
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 </html> 
