--- a/contact/index.html
+++ b/contact/index.html
@@ -35,12 +35,12 @@
         <h1>Contact Us</h1>
         <p class="contact-info">
             Reach out to discuss partnership opportunities. 
-            <span class="contact-email">Email: <a href="mailto:Alonbalonb@klyoscapital.com">Alonbalonb@klyoscapital.com</a></span> | 
+            <span class="contact-email">Email: <a href="mailto:Alonbalonb@klyoscapital.com">Alonb@klyoscapital.com</a></span> | 
             <span class="contact-phone">Phone: <a href="tel:+16503876567">+1 (650) 387 - 6567</a></span>
         </p>
     </main>
     <footer>
-        &copy; 2025 Klyos Capital Investment. All rights reserved.
+        &copy; 2025 Klyos Capital. All rights reserved.
     </footer>
     <script src="../js/script.js"></script>
 </body>
