--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="nav-menu">
                 <li><a href="./about/index.html">About Us</a></li>
                  <!--<li><a href="../products/index.html">Services</a></li>-->
-                <li><a href="./contact/index.html" class="active">Contact</a></li>
+                <li><a href="./contact/index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
