Change in Alon Profile Headshot

--- a/about/index.html
+++ b/about/index.html
@@ -39,19 +39,20 @@
         <p>Together, Julius and Alon create a symbiotic leadership dynamic that combines Julius's innovative foresight with Alon's evidence-driven approach. As they navigate the ever-evolving landscape of AI and other emerging technologies, their shared mission is to uncover and nurture the most promising opportunities, ensuring that Klyos remains at the vanguard of transformative investment opportunities.</p>
         <div class="team-container">
             <div class="team-member">
-                <img src="../img/JuliusEdited2.png" alt="Julius, Managing Partner">
+                <img src="../img/JuliusBW.png" alt="Julius, Managing Partner">
                 <div class="overlay">
                     <h3>Julius</h3>
                     <p>Partner, Researcher</p>
                 </div>
             </div>
             <div class="team-member">
-                <img src="../img/ElanEdit.png" alt="Alon, Investment Director">
+                <img src="../img/AlonBW2.png" alt="Alon, Investment Director">
                 <div class="overlay">
                     <h3>Alon</h3>
                     <p>Partner, Researcher</p>
                 </div>
             </div>
+            
         </div>
     </main>
     <footer>
